--- a/ArticleAPI/appsettings.Development.json
+++ b/ArticleAPI/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "sqlServer": "Server=tcp:localhost\\SQL2016; Initial Catalog=ArticleApi; User Id=david; Password=ldmddavid; Trusted_Connection=True;"
     }
   }
 }
