--- a/ArticleAPI/appsettings.json
+++ b/ArticleAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlServer": "Server=tcp:localhost\\SQL2016; Initial Catalog=ArticleApi; User Id=david; Password=ldmddavid; Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
