db connection string

--- a/ArticleAPI/appsettings.json
+++ b/ArticleAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlServer": "Server=tcp:localhost\\SQL2016; Initial Catalog=ArticleApi; User Id=david; Password=ldmddavid; Trusted_Connection=True;"
+    "sqlServer": "Server=; Initial Catalog=ArticleApi; User Id=; Password=; Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
