--- a/ArticleAPI/appsettings.Development.json
+++ b/ArticleAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "sqlServer": "Server=127.0.0.1,1433; Initial Catalog=ArticleApi; User Id=sa; Password=someThingComplicated1234; Trusted_Connection=false;"
   }
 }
