--- a/ArticleAPI/appsettings.json
+++ b/ArticleAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlServer": "Server=; Initial Catalog=ArticleApi; User Id=; Password=; Trusted_Connection=True;"
+    "sqlServer": "Server=127.0.0.1,1433; Initial Catalog=ArticleApi; User Id=sa; Password=someThingComplicated1234; Trusted_Connection=false;"
   },
   "AllowedHosts": "*"
 }
